# MsGraph-Python

./: pyproject.toml
graph_tutorial/graph_tutorial/: settings.py  urls.py
graph_tutorial/tutorial/: auth_helper.py  graph_helper.py  urls.py  views.py
