[tool.poetry]
name = "msgraph-python"
version = "0.1.0"
description = "A simple Django App to play with Microsoft Graph Api"
authors = ["Samwel Kanda"]

[tool.poetry.dependencies]
python = "^3.7"
django = "3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
